src/installers/x-special/iptables/rules.v4
#
# iptables for office workstation
#
# 2017-01-06 : Initial set of rules for T7600
# 2017-06-05 : Updated network devices for Z840
#
# Generated by iptables-save v1.4.21 on Fri Nov 18 18:16:21 2016
#

*filter
# Allow all outgoing, but drop incoming and forwarding packets by default
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Custom per-protocol chains
:UDP - [0:0]
:TCP - [0:0]
:ICMP - [0:0]

# Acceptable UDP traffic

# Acceptable TCP traffic
-A TCP -p tcp --dport 62202 -j ACCEPT
-A TCP -p tcp -i eno1 --dport 22 -j ACCEPT

# Acceptable ICMP traffic
-A ICMP -p icmp -i eno1 -j ACCEPT

# Boilerplate acceptance policy
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT

# Drop invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP

# Pass traffic to protocol-specific chains
## Only allow new connections (established and related should already be handled)
## For TCP, additionally only allow new SYN packets since that is the only valid
## method for establishing a new TCP connection
-A INPUT -p tcp --syn -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p icmp -m conntrack --ctstate NEW -j ICMP

# Reject anything that's fallen through to this point
## Try to be protocol-specific w/ rejection message
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable

# Rules to forward SSH ports to our Linux boxes, and RDP ports to our Windows boxes

# Firewall network details:
# 
# * Public IP Address: 137.78.161.79
# * Private IP Address: 192.168.2.1
#
# * Public Interface:  eth0 (14.04) / enp5s0 (16.04)
# * Private Interface: eth1 (14.04) / eno1   (16.04)
#
#-A FORWARD -i enp5s0 -o eno1 -p tcp --syn --dport 22 -m conntrack --ctstate NEW -j ACCEPT
#-A FORWARD -i enp5s0 -o eno1 -p tcp --syn --dport 3389 -m conntrack --ctstate NEW -j ACCEPT
#
#-A FORWARD -i enp5s0 -o eno1 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
#-A FORWARD -i eno1 -o enp5s0 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
#
#-A FORWARD -i eno1 -o enp5s0 -j ACCEPT
#-A FORWARD -j LOG

# End of Forward filtering rules

# Commit the changes
COMMIT

*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

#-A PREROUTING -i enp5s0 -p tcp --dport 62211 -j DNAT --to-destination 192.168.2.11:22
#-A PREROUTING -i enp5s0 -p tcp --dport 62212 -j DNAT --to-destination 192.168.2.12:22
#
#-A PREROUTING -i enp5s0 -p tcp --dport 33891 -j DNAT --to-destination 192.168.2.11:3389
#-A PREROUTING -i enp5s0 -p tcp --dport 33892 -j DNAT --to-destination 192.168.2.12:3389
#
#-A POSTROUTING -o eno1 -p tcp -d 192.168.2.0/24 -j SNAT --to-source 192.168.2.1
#
#-A POSTROUTING -o enp5s0 -j MASQUERADE

# Commit the changes
COMMIT

*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT

*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT

# Completed on Fri Nov 18 18:16:21 2016
# Generated by iptables-save v1.4.21 on Fri Nov 18 18:16:21 2016
